--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out",
+    "deploy:vercel": "vercel --prod"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.9",
