--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,9 @@
   "devCommand": "next dev",
   "cleanUrls": true,
   "framework": "nextjs",
-  "regions": ["cle1"],
+  "regions": [
+    "cle1"
+  ],
   "headers": [
     {
       "source": "/(.*)",
